// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Dialog basic render 1`] = `
<div
  className="obojobo-draft--components--modal--dialog "
  style={null}
>
  <div
    focusOnFirstElement={[Function]}
  >
    <div
      className="dialog-content"
      style={
        Object {
          "textAlign": "center",
        }
      }
    >
      Content
    </div>
    <div
      className="controls"
    />
  </div>
</div>
`;

exports[`Dialog render with no buttons 1`] = `
<div
  className="obojobo-draft--components--modal--dialog "
  style={null}
>
  <div
    focusOnFirstElement={[Function]}
  >
    <div
      className="dialog-content"
      style={
        Object {
          "textAlign": "center",
        }
      }
    >
      Content
    </div>
    <div
      className="controls"
    />
  </div>
</div>
`;

exports[`Dialog render with props 1`] = `
<div
  className="obojobo-draft--components--modal--dialog "
  style={
    Object {
      "width": "200 px",
    }
  }
>
  <div
    focusOnFirstElement={[Function]}
  >
    <h1
      className="heading"
      style={
        Object {
          "textAlign": null,
        }
      }
    >
      Title
    </h1>
    <div
      className="dialog-content"
      style={
        Object {
          "textAlign": null,
        }
      }
    >
      Content
    </div>
    <div
      className="controls"
    >
      <span
        className="text"
      >
        test
      </span>
    </div>
  </div>
</div>
`;
